--- a/FOE_CourseRegistrationSystem/FOE_CourseRegistrationSystem.csproj
+++ b/FOE_CourseRegistrationSystem/FOE_CourseRegistrationSystem.csproj
@@ -29,4 +29,11 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Dashboard\CoordinatorDashboard.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
