--- a/FOE_CourseRegistrationSystem/FOE_CourseRegistrationSystem.csproj
+++ b/FOE_CourseRegistrationSystem/FOE_CourseRegistrationSystem.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.3.3" />
+    <PackageReference Include="itextsharp.lgplv2.core" Version="1.7.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
       <PrivateAssets>all</PrivateAssets>
