--- a/FOE_CourseRegistrationSystem/FOE_CourseRegistrationSystem.csproj
+++ b/FOE_CourseRegistrationSystem/FOE_CourseRegistrationSystem.csproj
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
