--- a/FOE_CourseRegistrationSystem/appsettings.Development.json
+++ b/FOE_CourseRegistrationSystem/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JARVIS\\SQLEXPRESS;Database=CourseRegistrationDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=KANISTAN;Database=CourseRegistrationDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
