--- a/FOE_CourseRegistrationSystem/appsettings.json
+++ b/FOE_CourseRegistrationSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JARVIS\\SQLEXPRESS;Database=FacultyCourseDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=KANISTAN;Database=CourseRegistrationDB;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
