feature-backend updated

--- a/FOE_CourseRegistrationSystem/appsettings.Development.json
+++ b/FOE_CourseRegistrationSystem/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JARVIS\\SQLEXPRESS;Database=CourseRegistrationDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=JARVIS\\SQLEXPRESS;Database=DB2;Trusted_Connection=True;TrustServerCertificate=True"
   }
+
 }
