--- a/FOE_CourseRegistrationSystem/appsettings.Development.json
+++ b/FOE_CourseRegistrationSystem/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JARVIS\\SQLEXPRESS;Database=DB2;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-KLPMUS46\\TEW_SQLEXPRESS;Database=DB2;Trusted_Connection=True;TrustServerCertificate=True"
   }
 
 }
