--- a/FOE_CourseRegistrationSystem/appsettings.Development.json
+++ b/FOE_CourseRegistrationSystem/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JARVIS\\SQLEXPRESS;Database=DB2;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=KANISTAN;Database=DB2_NEW;Trusted_Connection=True;TrustServerCertificate=True"
   }
 
 }
