Coordinator approval was updated

--- a/FOE_CourseRegistrationSystem/appsettings.Development.json
+++ b/FOE_CourseRegistrationSystem/appsettings.Development.json
@@ -1,6 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-KLPMUS46\\TEW_SQLEXPRESS;Database=DB2;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-KLPMUS46\\TEW_SQLEXPRESS;Database=DB5;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
   }
 
 }
